--- a/app/views/expenses/_index.html.haml
+++ b/app/views/expenses/_index.html.haml
@@ -13,4 +13,4 @@
         %th.debit Debit
         %th.credit Credit
         %th.balance Balance
-      = render expenses, :bank_account => bank_account, :pass_through => pass_through
+      = render expenses, :bank_account => bank_account, :max_balance => max_balance, :pass_through => pass_through
