Replaced jquery-ui with jquery tools.

--- a/app/stylesheets/_formtastic_changes.scss
+++ b/app/stylesheets/_formtastic_changes.scss
@@ -54,6 +54,9 @@ form.formtastic {
 aside {
   form.formtastic {
     @include adjust-font-size-to(12px);
+    input {
+      border-width: 1px;
+    }
     fieldset {
       > ol > li {
         margin-bottom: 0;
