--- a/app/views/bank_accounts/edit.html.haml
+++ b/app/views/bank_accounts/edit.html.haml
@@ -1,3 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(bank_accounts_path, '« Back') do
-    = render :partial => 'edit', :locals => { :bank_account => @bank_account }, :layout => 'shared/block_content'
+%ul.secondary-navigation
+  %li= link_to("« Back", bank_accounts_path)
+= render :partial => 'edit', :locals => { :bank_account => @bank_account }, :layout => 'shared/block_content'
