--- a/app/views/bank_accounts/index.html.haml
+++ b/app/views/bank_accounts/index.html.haml
@@ -1,3 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create('table_container', 'Bank Accounts', :item_html => { :class => 'active'}) do
-    = render :partial => 'index', :locals => { :bank_accounts => @bank_accounts }, :layout => 'shared/block_content'
+%ul.secondary-navigation
+  %li= link_to("Bank Accounts", bank_accounts_path, :class => 'current')
+= render :partial => 'index', :locals => { :bank_accounts => @bank_accounts }, :layout => 'shared/block_content'
