--- a/app/views/creditors/index.html.haml
+++ b/app/views/creditors/index.html.haml
@@ -1,3 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(new_creditor_path, 'New Creditor') do
-    = render :partial => 'index', :locals => { :creditors => @creditors, :pass_through => @pass_through }, :layout => 'shared/block_content'
+%ul.secondary-navigation
+  %li= link_to("New Creditor", new_creditor_path)
+= render :partial => 'index', :locals => { :creditors => @creditors, :pass_through => @pass_through }, :layout => 'shared/block_content'
