--- a/app/views/creditors/new.html.haml
+++ b/app/views/creditors/new.html.haml
@@ -1,7 +1,4 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(creditors_path(@pass_through), '« Back')
-  - tab.create(new_creditor_path, 'New Creditor', :item_html => { :class => 'active' }) do
-    .content
-      %h2 Add a new Creditor
-      = render :partial => 'layouts/flashes'
-      = render 'form', :creditor => @creditor, :pass_through => @pass_through
+%ul.secondary-navigation
+  %li= link_to("« Back", creditors_path(@pass_through))
+  %li= link_to("New Creditor", new_creditor_path, :class => 'current')
+= render :partial => 'new', :locals => { :creditor => @creditor, :pass_through => @pass_through }, :layout => 'shared/block_content'
