--- a/app/views/presets/index.html.haml
+++ b/app/views/presets/index.html.haml
@@ -1,3 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(new_preset_path, 'New Preset') do
-    = render :partial => 'index', :locals => { :presets => @presets, :pass_through => @pass_through }, :layout => 'shared/block_content'
+%ul.secondary-navigation
+  %li= link_to("New Preset", new_preset_path)
+= render :partial => 'index', :locals => { :presets => @presets, :pass_through => @pass_through }, :layout => 'shared/block_content'
