--- a/app/views/presets/new.html.haml
+++ b/app/views/presets/new.html.haml
@@ -1,7 +1,7 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(presets_path(@pass_through), '« Back')
-  - tab.create(new_preset_path, 'New Preset', :item_html => { :class => 'active' }) do
-    = render :partial => 'presets/new', :locals => { :preset => @preset, :pass_through => @pass_through }, :layout => 'shared/block_content'
+%ul.secondary-navigation
+  %li= link_to("« Back", presets_path(@pass_through))
+  %li= link_to("New Preset", new_preset_path, :class => 'current')
+= render :partial => 'presets/new', :locals => { :preset => @preset, :pass_through => @pass_through }, :layout => 'shared/block_content'
 
 - content_for :sidebar do
   .block
