--- a/app/views/uploads/edit.html.haml
+++ b/app/views/uploads/edit.html.haml
@@ -1,6 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(new_upload_path, 'New Upload') do
-    .content
-      %h2 Editing upload
-      = render :partial => 'layouts/flashes'
-      = render 'form', :upload => @upload
+%ul.secondary-navigation
+  %li= link_to("New Upload", new_upload_path)
+= render :partial => 'edit', :locals => { :upload => @upload }, :layout => 'shared/block_content'
