--- a/app/views/uploads/new.html.haml
+++ b/app/views/uploads/new.html.haml
@@ -1,6 +1,3 @@
-= tabs_for(:class => 'secondary-navigation') do |tab|
-  - tab.create(new_upload_path, 'New Upload', :item_html => { :class => 'active' }) do
-    .content
-      %h2 Add a new Upload
-      = render :partial => 'layouts/flashes'
-      = render 'form', :upload => @upload
+%ul.secondary-navigation
+  %li= link_to("New Upload", new_upload_path, :class => 'current')
+= render :partial => 'new', :locals => { :upload => @upload }, :layout => 'shared/block_content'
