Replaced js for hovering with css.

--- a/app/stylesheets/_structure.scss
+++ b/app/stylesheets/_structure.scss
@@ -150,10 +150,10 @@ aside {
     text-align: right;
   }
   .row-actions {
-    //visibility: hidden;
+    visibility: hidden;
   }
   tr:hover .row-actions {
-    //visibility: visible;
+    visibility: visible;
   }
   th {
     text-align: left;
