--- a/app/views/creditors/_form.html.haml
+++ b/app/views/creditors/_form.html.haml
@@ -1,8 +1,7 @@
 = semantic_form_for(creditor) do |f|
   = render "shared/error_messages", :target => creditor
 
-  - pass_through.each do |k,v|
-    = hidden_field_tag k, v
+  = hash_as_hidden_fields(pass_through)
 
   = f.inputs do
     = f.input :name
