--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -12,8 +12,7 @@
 = semantic_form_for([bank_account, expense]) do |f|
   = render "shared/error_messages", :target => expense
 
-  - pass_through.each do |k,v|
-    = hidden_field_tag k, v
+  = hash_as_hidden_fields(pass_through)
 
   = f.inputs do
     = f.input :transaction_date, :input_html => { :disabled => true }
