Show nice message when no bank accounts.

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,53 +1,4 @@
-= form_for @search, :url => bank_account_expenses_path(@bank_account, :upload_id => @upload), :html => {:class => "search"} do |f|
-  %p
-    = f.search_field :description_or_creditor_name_or_category_name_like, :placeholder => "Search..."
-    = f.submit "Search"
-%ul.secondary-navigation.tabs
-  %li= link_to("Expenses", "#", :class => 'tab current')
-  %li= link_to("Chart", "#", :class => 'tab')
-  %li= link_to("Credit", "#", :class => 'tab')
-  %li= link_to("Debit", "http://www.nu.nl", :class => 'tab')
-.panes
-  = render :partial => 'index', :locals => { :expenses => @expenses, :bank_account => @bank_account, :max_balance => @max_balance, :pass_through => @pass_through }, :layout => 'shared/block_content'
-  = render :partial => 'expenses_tab', :locals => { :bank_account => @bank_account }
-  = render :partial => 'debits_and_credits_tabs', :locals => { :categories_chart => @categories_chart }
-
-- content_for :sidebar do
-  .block
-    %h3 Accounts
-    .content
-      %ul
-        - @bank_accounts.each do |bank_account|
-          %li{:title => bank_account.description}
-            - if bank_account == @bank_account
-              = "#{bank_account}"
-            - else
-              = link_to("#{bank_account}", bank_account_expenses_path(bank_account, :upload_id => @upload))
-
-  .block
-    %h3 Filter
-    .content
-      = semantic_form_for @search, :url => bank_account_expenses_path(@bank_account, :upload_id => @upload) do |f|
-        = f.inputs do
-          %li.check_boxes
-            %fieldset
-              %legend.label
-                %label Creditor
-              %ol
-                - f.collection_checks :creditor_id_in, Creditor.checked_first(@search.creditor_id_in), :id, :name do |check|
-                  %li
-                    = check.box
-                    = check.label
-          %li.check_boxes
-            %fieldset
-              %legend.label
-                %label Category 
-              %ol
-                - f.collection_checks :category_parent_id_in, Category.roots, :id, :name do |check|
-                  %li
-                    = check.box
-                    = check.label
-          -#= f.input :creditor_id_in, :collection => Creditor.checked_first(@search.creditor_id_in), :as => :check_boxes, :required => false
-          -#= f.input :category_parent_id_in, :collection => Category.roots, :as => :check_boxes
-        = f.buttons do
-          = f.commit_button "Search"
+- if @bank_account
+  = render :partial => 'expenses/w_expenses', :locals => { :search => @search, :bank_account => @bank_account, :upload_id => @upload, :expenses => @expenses, :max_balance => @max_balance, :categories_chart => @categories_chart, :pass_through => @pass_through }
+- else
+  = render :partial => 'expenses/wo_expenses', :layout => 'shared/block_content'
