--- a/app/views/categories/_new.html.haml
+++ b/app/views/categories/_new.html.haml
@@ -1,2 +1,2 @@
 -title "Add a new Category"
-= render 'form', :category => @category, :pass_through => @pass_through
+= render 'form', :category => category, :pass_through => pass_through
