--- a/app/views/bank_accounts/_bank_account.html.haml
+++ b/app/views/bank_accounts/_bank_account.html.haml
@@ -1,6 +1,6 @@
 %tr[bank_account]{ :class => "#{cycle('odd', 'even')}"}
   %td
-    = "#{bank_account}"
+    = link_to(bank_account, bank_account_expenses_path(bank_account))
     .row-actions
       = link_to('Edit', edit_bank_account_path(bank_account))
   %td= bank_account.description
